scaling on mobile fix

--- a/grad_website/style.css
+++ b/grad_website/style.css
@@ -133,9 +133,9 @@ margin-top: 10% ;
 -moz-column-count: 2; /* Firefox */
 column-count: 2;
 
--webkit-column-width: 100px; /* Chrome, Safari, Opera */
--moz-column-width: 100px; /* Firefox */
-column-width: 100px;
+-webkit-column-width: 300px; /* Chrome, Safari, Opera */
+-moz-column-width: 300px; /* Firefox */
+column-width: 300px;
 }
 
 .main-container {
